--- a/src/assets/icons/custom-icons/icons.html
+++ b/src/assets/icons/custom-icons/icons.html
@@ -58,6 +58,24 @@
 
     <div class="preview">
             <span class="inner">
+                <i class="icon icon-github"></i>
+    </span>
+        <br>
+        <span class='label'>github</span>
+    </div>
+
+
+    <div class="preview">
+            <span class="inner">
+                <i class="icon icon-linkedin"></i>
+    </span>
+        <br>
+        <span class='label'>linkedin</span>
+    </div>
+
+
+    <div class="preview">
+            <span class="inner">
                 <i class="icon icon-mandalorian"></i>
     </span>
         <br>
