--- a/src/assets/icons/custom-icons/icons.html
+++ b/src/assets/icons/custom-icons/icons.html
@@ -83,5 +83,23 @@
     </div>
 
 
+    <div class="preview">
+            <span class="inner">
+                <i class="icon icon-sound-off"></i>
+    </span>
+        <br>
+        <span class='label'>sound-off</span>
+    </div>
+
+
+    <div class="preview">
+            <span class="inner">
+                <i class="icon icon-sound"></i>
+    </span>
+        <br>
+        <span class='label'>sound</span>
+    </div>
+
+
 </body>
 </html>
